--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/elasticsearch-rails/
+      - bundle:/usr/local/bundle
     ports:
       - 3000:3000
     depends_on:
@@ -44,3 +45,4 @@ services:
 volumes:
   mysql_data:
   esdata:
+  bundle:
